# pomodoro

./: .dockerignore  Dockerfile  LICENSE  Makefile  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: github.ci.yml
app/: consumer.py  dependency.py  exception.py  main.py  settings.py
app/broker/: producer.py
app/clients/: __init__.py  base_client.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  task.py  user.py
app/infrastructure/: gunicorn.conf.py
app/infrastructure/broker/: accessor.py
app/infrastructure/cache/: __init__.py  access.py
app/infrastructure/database/: __init__.py  access.py
app/models/: __init__.py  task.py  user.py
app/repository/: __init__.py  cache_tasks.py  task.py  user.py
app/schemas/: __init__.py  auth.py  task.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: __init__.py  handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_tasks.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/clients/: __init__.py  base_client.py  google.py  mail.py  yandex.py
app/users/user_profile/: handlers.py  models.py  repository.py  service.py
migrations/: env.py
migrations/versions/: 89098728751c_user_id.py  8c8b8a41c556_init.py
tests/: conftest.py
tests/fixtures/: infrastructure.py  settings.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/unit/users/auth/: test_auth_service.py
worker/: celery.py  tasks.py
