[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
psycopg2-binary = "^2.9.9"
redis = "^5.0.6"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
gunicorn = "^23.0.0"
uvicorn-worker = "^0.2.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-factoryboy = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"